// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField doesn't render the errorMessage if error prop is false 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected as password field 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected when disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 0.6,
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": true,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={false}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected with error message 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(0, 95%, 30%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Error message
  </Text>
</View>
`;

exports[`TextField shows error style, but doesn't render the errorMessage if errorMessage prop is undefined 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
        "marginBottom": 8,
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        [
          {
            "color": "hsl(210, 25%, 25%)",
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      {
        "alignItems": "center",
        "borderColor": "hsl(0, 95%, 30%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      style={
        [
          {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;
